# HyperAgent

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  config.json
api/: .env.example  Dockerfile  pyproject.toml  test_worker.py  worker.py
api/alembic/: env.py
api/alembic/versions/: 20260115_add_file_hash_column.py  35f727c26098_add_conversation_and_message_models.py  c8f92183a4d1_add_users_table.py  d7a3f8e12b9c_add_worker_fields.py  d908fb77cf42_add_skills_tables.py  e367d61b6157_add_user_id_to_research_tasks.py
api/app/: __init__.py  config.py  main.py
api/app/agents/: __init__.py  chat_agent.py  context_compression.py  events.py  memory.py  prompts.py  research_agent.py  routing.py  scenarios.py  state.py  stream_processor.py  supervisor.py  utils.py
api/app/agents/skills/builtin/: __init__.py  code_generation_skill.py  (+5 more)
api/app/agents/subagents/: __init__.py  analytics.py  chat.py  code.py  computer.py  data.py  image.py  research.py  writing.py
api/app/agents/tools/: __init__.py  browser.py  browser_sandbox_manager.py  browser_use.py  code_execution.py  computer_use.py  handoff.py  image_generation.py  react_tool.py  react_utils.py  registry.py  sandbox_file.py  sandbox_manager.py  search_gate.py  skill_invocation.py  tool_gate.py  validators.py  vision.py
api/app/ai/: __init__.py  image.py  llm.py
api/app/api/: conversations.py  hitl.py  multimodal.py  query.py  tasks.py
api/app/core/: auth.py  logging.py
api/app/db/: __init__.py  base.py  models.py
api/app/guardrails/: __init__.py  base.py
api/app/guardrails/scanners/: __init__.py  input_scanner.py  tool_scanner.py
api/app/models/: schemas.py
api/app/repository/: __init__.py
api/app/routers/: conversations.py  files.py  query.py  tasks.py
api/app/sandbox/: __init__.py  browser_sandbox_manager.py  code_executor.py  code_sandbox_manager.py  computer_executor.py  file.py
api/app/services/: audio_transcription.py  circuit_breaker.py  code_executor.py  computer_executor.py  e2b_executor.py  file_processor.py  file_storage.py  image_generation.py  llm.py  model_tiers.py  multimodal.py  search.py  skill_registry.py  storage.py  task_queue.py  text_to_speech.py
api/app/workers/: __init__.py  main.py  progress.py
api/app/workers/tasks/: __init__.py  research.py
api/evals/: test_response_quality.py
api/evals/datasets/: response_quality.json
api/evals/evaluators/: __init__.py  response_quality_evaluator.py
api/evals/mocks/: __init__.py
api/tests/: conftest.py
(+371 files in other folders)
