[project]
name = "hyperagent-api"
version = "0.1.0"
description = "HyperAgent Backend API Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "boto3>=1.35.0",
    "pypdf>=4.0.0",
    "e2b>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
    "e2b-desktop>=1.0.0",
    "sse-starlette>=2.2.0",
    "tavily-python>=0.5.0",
    "loguru>=0.7.0",
    "PyJWT>=2.8.0",
    "arq>=0.26.0",
    "browser-use>=0.11.2",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "google-genai>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
